--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.amazon.alexa/ask-sdk-servlet-support -->
+		<dependency>
+		    <groupId>com.amazon.alexa</groupId>
+		    <artifactId>ask-sdk-servlet-support</artifactId>
+		    <version>2.86.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
